# reflexive

./: .gitlab-ci.yml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: verify-public.yml
docs/: adoption.md  architecture.md  architecture.mmd  cli.md
docs/adr/: 0001-use-app-owned-state-roots-for-the-public-safe-surface.md  0002-separate-inspection-checks-and-operator-guidance.md  README.md
scripts/: verify-public.sh
src/reflexive/: __main__.py  cli.py  cortex.py  paths.py  snapshots.py
tests/: test_cli.py  test_cortex_cli.py
