[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reflexive"
version = "0.1.0"
description = "CLI for safely snapshotting, recovering, and isolating AI coding tool state on a local workstation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
reflexive = "reflexive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
